# robot_factory_rust

./: .gitignore  Cargo.toml  README.md  change DB structure.md  curl.txt  robots_report.xlsx
src/: constants.rs  create.rs  db.rs  db_pool.rs  main.rs  order.rs  processing.rs  report.rs  robot.rs  structures.rs  tests.rs  user.rs
