[package]
name = "robots"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-sqlite = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
validator = "0.10"
validator_derive = "0.10"
regex = "1.9.6"