[package]
name = "robots"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
# axum-sqlite = "0.1.0"
axum-test-helper = "0.3.0"
chrono = "0.4.31"
chrono-tz = "0.8.3"
lettre = "0.10.4"
regex = "1.9.6"
rust_xlsxwriter = "0.49.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ]}
# sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.9"
validator = "0.10"
validator_derive = "0.10"
