[package]
name = "robots"
version = "0.1.0"
edition = "2021"
authors = ["Mike, <AntonovMA@outlook.com>"]

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
chrono = "0.4.31"
chrono-tz = "0.8.3"
lazy_static = "1.4.0"
# diesel = { version = "2.1.0", features = ["postgres"] }
# dotenv = "0.15"
lettre = "0.10.4"
once_cell = "1.18.0"
regex = "1.9.6"
rust_xlsxwriter = "0.49.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ]}
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
validator = "0.10"
validator_derive = "0.10"

[dev-dependencies]
axum-test-helper = "0.3.0"
